codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__transcript_copy_success.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 3605
expression: "render_bottom_popup(&chat, 80)"
---
▌
▌ Ask Codex to do anything
▌
  Copied selection to clipboard
