codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__transcript_copy_unconfirmed.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 3612
expression: "render_bottom_popup(&chat, 80)"
---
▌
▌ Ask Codex to do anything
▌
  Copy unconfirmed; /export saves chat
