codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__transcript_copy_unconfirmed_narrow.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 3616
expression: "render_bottom_popup(&chat, 40)"
---
▌
▌ Ask Codex to do anything
▌
  Copy unconfirmed; /export saves chat
